csc324/a3/output/uotParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/dmitry/Documents/University/repo/csc324/a3/uot.g 2011-04-04 12:45:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class uotParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FSLASH", "ASTERISK", "SEMI", "BEGIN", "END", "ASSIGN", "LBRACKET", "RBRACKET", "COMMA", "CHAR", "NUMBER", "TRUE", "FALSE", "STRING_LITERAL", "WS", "DIGIT", "COMMENT", "'using'", "'prototype'", "'yield'", "'when'", "'orwhen'", "'otherwise'", "'aslong'", "'-'", "'+'", "'lessthan'", "'greaterthan'", "'greaterorequal'", "'lessorequal'", "'is'", "'isnot'", "'and'", "'or'", "'visible'", "'shielded'", "'onlyone'", "'constant'", "'hidden'", "'integer'", "'bool'", "'char'", "'double'", "'nothing'", "'_'", "'.'", "'\\\\\\ '", "'E'"
    };
    public static final int EOF=-1;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int FSLASH=4;
    public static final int ASTERISK=5;
    public static final int SEMI=6;
    public static final int BEGIN=7;
    public static final int END=8;
    public static final int ASSIGN=9;
    public static final int LBRACKET=10;
    public static final int RBRACKET=11;
    public static final int COMMA=12;
    public static final int CHAR=13;
    public static final int NUMBER=14;
    public static final int TRUE=15;
    public static final int FALSE=16;
    public static final int STRING_LITERAL=17;
    public static final int WS=18;
    public static final int DIGIT=19;
    public static final int COMMENT=20;

    // delegates
    // delegators


        public uotParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public uotParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return uotParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/dmitry/Documents/University/repo/csc324/a3/uot.g"; }



    // $ANTLR start "prog"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:4:1: prog : ( useStatements | protoDecs )+ ;
    public final void prog() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:4:7: ( ( useStatements | protoDecs )+ )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:4:9: ( useStatements | protoDecs )+
            {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:4:9: ( useStatements | protoDecs )+
            int cnt1=0;
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==21) ) {
                    alt1=1;
                }
                else if ( (LA1_0==22||(LA1_0>=38 && LA1_0<=42)) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:4:10: useStatements
            	    {
            	    pushFollow(FOLLOW_useStatements_in_prog13);
            	    useStatements();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:4:24: protoDecs
            	    {
            	    pushFollow(FOLLOW_protoDecs_in_prog15);
            	    protoDecs();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "useStatements"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:6:1: useStatements : 'using' ( dirname FSLASH )* ( dirname | ASTERISK ) SEMI ;
    public final void useStatements() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:7:2: ( 'using' ( dirname FSLASH )* ( dirname | ASTERISK ) SEMI )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:7:4: 'using' ( dirname FSLASH )* ( dirname | ASTERISK ) SEMI
            {
            match(input,21,FOLLOW_21_in_useStatements26); 
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:7:12: ( dirname FSLASH )*
            loop2:
            do {
                int alt2=2;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:7:13: dirname FSLASH
            	    {
            	    pushFollow(FOLLOW_dirname_in_useStatements29);
            	    dirname();

            	    state._fsp--;

            	    match(input,FSLASH,FOLLOW_FSLASH_in_useStatements31); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:7:30: ( dirname | ASTERISK )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=LBRACKET && LA3_0<=RBRACKET)||(LA3_0>=CHAR && LA3_0<=NUMBER)||LA3_0==28||(LA3_0>=48 && LA3_0<=50)) ) {
                alt3=1;
            }
            else if ( (LA3_0==ASTERISK) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:7:31: dirname
                    {
                    pushFollow(FOLLOW_dirname_in_useStatements36);
                    dirname();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:7:39: ASTERISK
                    {
                    match(input,ASTERISK,FOLLOW_ASTERISK_in_useStatements38); 

                    }
                    break;

            }

            match(input,SEMI,FOLLOW_SEMI_in_useStatements41); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "useStatements"


    // $ANTLR start "protoDecs"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:9:1: protoDecs : ( modifiers )* 'prototype' validName protoBody ;
    public final void protoDecs() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:10:2: ( ( modifiers )* 'prototype' validName protoBody )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:10:5: ( modifiers )* 'prototype' validName protoBody
            {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:10:5: ( modifiers )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=38 && LA4_0<=42)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:10:6: modifiers
            	    {
            	    pushFollow(FOLLOW_modifiers_in_protoDecs52);
            	    modifiers();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            match(input,22,FOLLOW_22_in_protoDecs56); 
            pushFollow(FOLLOW_validName_in_protoDecs58);
            validName();

            state._fsp--;

            pushFollow(FOLLOW_protoBody_in_protoDecs60);
            protoBody();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "protoDecs"


    // $ANTLR start "protoBody"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:13:1: protoBody : BEGIN ( methodDecs | fieldDecs )* END ;
    public final void protoBody() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:14:2: ( BEGIN ( methodDecs | fieldDecs )* END )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:14:5: BEGIN ( methodDecs | fieldDecs )* END
            {
            match(input,BEGIN,FOLLOW_BEGIN_in_protoBody72); 
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:14:11: ( methodDecs | fieldDecs )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=38 && LA5_0<=42)) ) {
                    int LA5_2 = input.LA(2);

                    if ( (LA5_2==47) ) {
                        alt5=1;
                    }
                    else if ( ((LA5_2>=43 && LA5_2<=46)) ) {
                        int LA5_4 = input.LA(3);

                        if ( (LA5_4==CHAR) ) {
                            alt5=1;
                        }
                        else if ( (LA5_4==END||(LA5_4>=38 && LA5_4<=42)) ) {
                            alt5=2;
                        }


                    }


                }


                switch (alt5) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:14:12: methodDecs
            	    {
            	    pushFollow(FOLLOW_methodDecs_in_protoBody75);
            	    methodDecs();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:14:25: fieldDecs
            	    {
            	    pushFollow(FOLLOW_fieldDecs_in_protoBody79);
            	    fieldDecs();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,END,FOLLOW_END_in_protoBody83); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "protoBody"


    // $ANTLR start "fieldDecs"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:17:1: fieldDecs : modifiers datatype ;
    public final void fieldDecs() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:18:2: ( modifiers datatype )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:18:5: modifiers datatype
            {
            pushFollow(FOLLOW_modifiers_in_fieldDecs95);
            modifiers();

            state._fsp--;

            pushFollow(FOLLOW_datatype_in_fieldDecs97);
            datatype();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "fieldDecs"


    // $ANTLR start "methodDecs"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:21:1: methodDecs : modifiers yieldtype validName formalList BEGIN statementList END ;
    public final void methodDecs() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:22:2: ( modifiers yieldtype validName formalList BEGIN statementList END )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:22:5: modifiers yieldtype validName formalList BEGIN statementList END
            {
            pushFollow(FOLLOW_modifiers_in_methodDecs109);
            modifiers();

            state._fsp--;

            pushFollow(FOLLOW_yieldtype_in_methodDecs111);
            yieldtype();

            state._fsp--;

            pushFollow(FOLLOW_validName_in_methodDecs113);
            validName();

            state._fsp--;

            pushFollow(FOLLOW_formalList_in_methodDecs115);
            formalList();

            state._fsp--;

            match(input,BEGIN,FOLLOW_BEGIN_in_methodDecs117); 
            pushFollow(FOLLOW_statementList_in_methodDecs119);
            statementList();

            state._fsp--;

            match(input,END,FOLLOW_END_in_methodDecs121); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "methodDecs"


    // $ANTLR start "statementList"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:25:1: statementList : ( statement )* ;
    public final void statementList() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:26:2: ( ( statement )* )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:26:4: ( statement )*
            {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:26:4: ( statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==CHAR||(LA6_0>=23 && LA6_0<=24)||LA6_0==27||(LA6_0>=43 && LA6_0<=46)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:26:5: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_statementList134);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statementList"


    // $ANTLR start "statement"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:27:1: statement : ( validName ASSIGN expr SEMI | 'yield' expr SEMI | datatype validName ( ASSIGN expr )? SEMI | when | aslong );
    public final void statement() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:28:2: ( validName ASSIGN expr SEMI | 'yield' expr SEMI | datatype validName ( ASSIGN expr )? SEMI | when | aslong )
            int alt8=5;
            switch ( input.LA(1) ) {
            case CHAR:
                {
                alt8=1;
                }
                break;
            case 23:
                {
                alt8=2;
                }
                break;
            case 43:
            case 44:
            case 45:
            case 46:
                {
                alt8=3;
                }
                break;
            case 24:
                {
                alt8=4;
                }
                break;
            case 27:
                {
                alt8=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:28:4: validName ASSIGN expr SEMI
                    {
                    pushFollow(FOLLOW_validName_in_statement144);
                    validName();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_statement146); 
                    pushFollow(FOLLOW_expr_in_statement148);
                    expr();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_statement150); 

                    }
                    break;
                case 2 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:29:4: 'yield' expr SEMI
                    {
                    match(input,23,FOLLOW_23_in_statement157); 
                    pushFollow(FOLLOW_expr_in_statement159);
                    expr();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_statement161); 

                    }
                    break;
                case 3 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:30:4: datatype validName ( ASSIGN expr )? SEMI
                    {
                    pushFollow(FOLLOW_datatype_in_statement168);
                    datatype();

                    state._fsp--;

                    pushFollow(FOLLOW_validName_in_statement170);
                    validName();

                    state._fsp--;

                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:30:23: ( ASSIGN expr )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==ASSIGN) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:30:24: ASSIGN expr
                            {
                            match(input,ASSIGN,FOLLOW_ASSIGN_in_statement173); 
                            pushFollow(FOLLOW_expr_in_statement175);
                            expr();

                            state._fsp--;


                            }
                            break;

                    }

                    match(input,SEMI,FOLLOW_SEMI_in_statement179); 

                    }
                    break;
                case 4 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:31:4: when
                    {
                    pushFollow(FOLLOW_when_in_statement185);
                    when();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:32:4: aslong
                    {
                    pushFollow(FOLLOW_aslong_in_statement190);
                    aslong();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "when"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:35:1: when : 'when' expr BEGIN whenBody END ;
    public final void when() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:35:6: ( 'when' expr BEGIN whenBody END )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:35:8: 'when' expr BEGIN whenBody END
            {
            match(input,24,FOLLOW_24_in_when201); 
            pushFollow(FOLLOW_expr_in_when203);
            expr();

            state._fsp--;

            match(input,BEGIN,FOLLOW_BEGIN_in_when205); 
            pushFollow(FOLLOW_whenBody_in_when207);
            whenBody();

            state._fsp--;

            match(input,END,FOLLOW_END_in_when209); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "when"


    // $ANTLR start "whenBody"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:36:1: whenBody : statementList ( ( 'orwhen' expr statementList )* 'otherwise' statementList )? ;
    public final void whenBody() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:36:9: ( statementList ( ( 'orwhen' expr statementList )* 'otherwise' statementList )? )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:36:11: statementList ( ( 'orwhen' expr statementList )* 'otherwise' statementList )?
            {
            pushFollow(FOLLOW_statementList_in_whenBody215);
            statementList();

            state._fsp--;

            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:36:25: ( ( 'orwhen' expr statementList )* 'otherwise' statementList )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( ((LA10_0>=25 && LA10_0<=26)) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:36:26: ( 'orwhen' expr statementList )* 'otherwise' statementList
                    {
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:36:26: ( 'orwhen' expr statementList )*
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==25) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:36:27: 'orwhen' expr statementList
                    	    {
                    	    match(input,25,FOLLOW_25_in_whenBody219); 
                    	    pushFollow(FOLLOW_expr_in_whenBody221);
                    	    expr();

                    	    state._fsp--;

                    	    pushFollow(FOLLOW_statementList_in_whenBody223);
                    	    statementList();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop9;
                        }
                    } while (true);

                    match(input,26,FOLLOW_26_in_whenBody227); 
                    pushFollow(FOLLOW_statementList_in_whenBody229);
                    statementList();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "whenBody"


    // $ANTLR start "aslong"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:39:1: aslong : 'aslong' expr BEGIN aslongBody END ;
    public final void aslong() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:39:8: ( 'aslong' expr BEGIN aslongBody END )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:39:10: 'aslong' expr BEGIN aslongBody END
            {
            match(input,27,FOLLOW_27_in_aslong241); 
            pushFollow(FOLLOW_expr_in_aslong243);
            expr();

            state._fsp--;

            match(input,BEGIN,FOLLOW_BEGIN_in_aslong245); 
            pushFollow(FOLLOW_aslongBody_in_aslong247);
            aslongBody();

            state._fsp--;

            match(input,END,FOLLOW_END_in_aslong249); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "aslong"


    // $ANTLR start "aslongBody"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:40:1: aslongBody : statementList ;
    public final void aslongBody() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:41:2: ( statementList )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:41:4: statementList
            {
            pushFollow(FOLLOW_statementList_in_aslongBody257);
            statementList();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "aslongBody"


    // $ANTLR start "expr"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:42:1: expr : ( mult_expr | ( '-' | '+' ) mult_expr );
    public final void expr() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:43:4: ( mult_expr | ( '-' | '+' ) mult_expr )
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==LBRACKET||(LA11_0>=CHAR && LA11_0<=STRING_LITERAL)) ) {
                alt11=1;
            }
            else if ( ((LA11_0>=28 && LA11_0<=29)) ) {
                alt11=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 11, 0, input);

                throw nvae;
            }
            switch (alt11) {
                case 1 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:43:7: mult_expr
                    {
                    pushFollow(FOLLOW_mult_expr_in_expr268);
                    mult_expr();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:44:7: ( '-' | '+' ) mult_expr
                    {
                    if ( (input.LA(1)>=28 && input.LA(1)<=29) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_mult_expr_in_expr282);
                    mult_expr();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "expr"


    // $ANTLR start "mult_expr"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:47:1: mult_expr : addsub_expr ( ( '*' | '/' ) addsub_expr )* ;
    public final void mult_expr() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:48:4: ( addsub_expr ( ( '*' | '/' ) addsub_expr )* )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:48:7: addsub_expr ( ( '*' | '/' ) addsub_expr )*
            {
            pushFollow(FOLLOW_addsub_expr_in_mult_expr298);
            addsub_expr();

            state._fsp--;

            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:48:19: ( ( '*' | '/' ) addsub_expr )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( ((LA12_0>=FSLASH && LA12_0<=ASTERISK)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:48:20: ( '*' | '/' ) addsub_expr
            	    {
            	    if ( (input.LA(1)>=FSLASH && input.LA(1)<=ASTERISK) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_addsub_expr_in_mult_expr311);
            	    addsub_expr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "mult_expr"


    // $ANTLR start "addsub_expr"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:50:1: addsub_expr : ineq_expr ( ( '+' | '-' ) ineq_expr )* ;
    public final void addsub_expr() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:51:4: ( ineq_expr ( ( '+' | '-' ) ineq_expr )* )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:51:7: ineq_expr ( ( '+' | '-' ) ineq_expr )*
            {
            pushFollow(FOLLOW_ineq_expr_in_addsub_expr328);
            ineq_expr();

            state._fsp--;

            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:51:17: ( ( '+' | '-' ) ineq_expr )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( ((LA13_0>=28 && LA13_0<=29)) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:51:19: ( '+' | '-' ) ineq_expr
            	    {
            	    if ( (input.LA(1)>=28 && input.LA(1)<=29) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_ineq_expr_in_addsub_expr342);
            	    ineq_expr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "addsub_expr"


    // $ANTLR start "ineq_expr"
    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:54:1: ineq_expr : eq_expr ( ( 'lessthan' | 'greaterthan' | 'greaterorequal' | 'lessorequal' ) eq_expr )* ;
    public final void ineq_expr() throws RecognitionException {
        try {
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:55:4: ( eq_expr ( ( 'lessthan' | 'greaterthan' | 'greaterorequal' | 'lessorequal' ) eq_expr )* )
            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:55:7: eq_expr ( ( 'lessthan' | 'greaterthan' | 'greaterorequal' | 'lessorequal' ) eq_expr )*
            {
            pushFollow(FOLLOW_eq_expr_in_ineq_expr361);
            eq_expr();

            state._fsp--;

            // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:55:15: ( ( 'lessthan' | 'greaterthan' | 'greaterorequal' | 'lessorequal' ) eq_expr )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( ((LA14_0>=30 && LA14_0<=33)) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // /Users/dmitry/Documents/University/repo/csc324/a3/uot.g:55:16: ( 'lessthan' | 'greaterthan' | 'greaterorequal' | 'lessorequal' ) eq_expr
            	    {
            	    if ( (input.LA(1)>=30 && input.LA(1)<=33) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_eq_expr_in_ineq_expr388);
            	    eq_expr();

            	    state._fsp--;


            	    }
            	    break;
